@@ -57,6 +57,12 @@ static int gal4_test(HIO_HANDLE *f, char *t, const int start)
 	return 0;
 }
 
+
+#define GAL4_SAMP_16BIT		(1 << 2)
+#define GAL4_SAMP_LOOP		(1 << 3)
+#define GAL4_SAMP_LOOP_BIDIR	(1 << 4)
+#define GAL4_SAMP_SET_PANNING	(1 << 5)
+
 struct local_data {
     int snum;
 };
@@ -219,7 +225,7 @@ static int get_inst(struct module_data *m, uint32 size, HIO_HANDLE *f, void *par
 	struct local_data *data = (struct local_data *)parm;
 	int i, j;
 	int srate, finetune, flags;
-	int val, vwf, vra, vde, vsw /*, fade*/;
+	int val, pan, vwf, vra, vde, vsw /*, fade*/;
 	uint8 buf[30];
 
 	hio_read8(f);		/* 00 */
@@ -318,35 +324,36 @@ static int get_inst(struct module_data *m, uint32 size, HIO_HANDLE *f, void *par
 		return -1;
 
 	for (j = 0; j < mod->xxi[i].nsm; j++, data->snum++) {
+		struct xmp_subinstrument *sub = &mod->xxi[i].sub[j];
+
 		hio_read32b(f);	/* SAMP */
 		hio_read32b(f);	/* size */
 
 		hio_read(mod->xxs[data->snum].name, 1, 28, f);
 
-		mod->xxi[i].sub[j].pan = hio_read8(f) * 4;
-		if (mod->xxi[i].sub[j].pan == 0)	/* not sure about this */
-			mod->xxi[i].sub[j].pan = 0x80;
-
-		mod->xxi[i].sub[j].vol = hio_read8(f);
+		pan = hio_read8(f);
+		sub->vol = hio_read8(f);
 		flags = hio_read8(f);
 		hio_read8(f);	/* unknown - 0x80 */
 
-		mod->xxi[i].sub[j].vwf = vwf;
-		mod->xxi[i].sub[j].vde = vde;
-		mod->xxi[i].sub[j].vra = vra;
-		mod->xxi[i].sub[j].vsw = vsw;
-		mod->xxi[i].sub[j].sid = data->snum;
+		sub->pan = (flags & GAL4_SAMP_SET_PANNING) ?
+			   MIN(pan * 4, 255) : NO_SAMPLE_PANNING;
+		sub->vwf = vwf;
+		sub->vde = vde;
+		sub->vra = vra;
+		sub->vsw = vsw;
+		sub->sid = data->snum;
 
 		mod->xxs[data->snum].len = hio_read32l(f);
 		mod->xxs[data->snum].lps = hio_read32l(f);
 		mod->xxs[data->snum].lpe = hio_read32l(f);
 
 		mod->xxs[data->snum].flg = 0;
-		if (flags & 0x04)
+		if (flags & GAL4_SAMP_16BIT)
 			mod->xxs[data->snum].flg |= XMP_SAMPLE_16BIT;
-		if (flags & 0x08)
+		if (flags & GAL4_SAMP_LOOP)
 			mod->xxs[data->snum].flg |= XMP_SAMPLE_LOOP;
-		if (flags & 0x10)
+		if (flags & GAL4_SAMP_LOOP_BIDIR)
 			mod->xxs[data->snum].flg |= XMP_SAMPLE_LOOP_BIDIR;
 		/* if (flags & 0x80)
 			mod->xxs[data->snum].flg |= ? */
@@ -433,7 +440,7 @@ static int gal4_load(struct module_data *m, HIO_HANDLE *f, const int start)
 	if (libxmp_init_pattern(mod) < 0)
 		return -1;
 
-	D_(D_INFO "Stored patterns: %d\n", mod->pat);
+	D_(D_INFO "Stored patterns: %d", mod->pat);
 	D_(D_INFO "Stored samples : %d ", mod->smp);
 
 	hio_seek(f, start + offset, SEEK_SET);
