@@ -16,7 +16,7 @@ Galaxy Music System 4.0
 3999 249
 0 118 58 207 42 96 32 45 45 32 45 45 32 45 32 45 45 45 32 45 0 8 16 0 16 127 0 58 128 0 12 131 10 8 128 1 22 0 2 8 192 3 0 96 4 0 3 8 0 160 5 0 0 0 0 160 0 40 224 1 24 32 3 32 192 3 32 96 4 32 0 5 32 160 5 32 64 6 32 224 6 0 0 192 83 65 77 80 220 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
-205 64 812 208 53 0 128 10 32 0 0 0 0 0 0 0
+205 64 -1 208 53 0 128 10 32 0 0 0 0 0 0 0
 64 0 1 2 3
 64 4 5 6 7
 64 8 9 10 11
@@ -67,7 +67,7 @@ Galaxy Music System 4.0
 64 5d53e29fc4d2cc825b08b136a7d74885
 64 83f0bb3e24aac7767189194b8c583d4e
 64 34272dd82547ec99759a8a67a52cfdc9
-4243712224 605622020 1161705005 4 d41d8cd98f00b204e9800998ecf8427e 
+-51255072 605622020 1161705005 4 d41d8cd98f00b204e9800998ecf8427e 
 128 64 0
 128 64 0
 128 64 0
