@@ -6,6 +6,8 @@ Stable versions
 	- All internal module time/duration calculations are now in doubles
 	  (fixes off-by-one module time on final tick of some modules).
 	- Fix XM volume effects cxx/dxx accidentally having effects memory.
+	- Correct default of sample default panning values to -1 (no default
+	  panning) for most module formats.
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
